Added contact to home page, adjusted feature section, adjusted navbar.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sights Studios - Where Excellence and Efficiency Meet</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
