--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>Sights Studios - Where Excellence and Efficiency Meet</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
@@ -34,15 +35,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <svg width="0" height="0">
+      <defs>
+        <linearGradient id="grad1" gradientTransform="rotate(315)">
+          <stop offset="0%" style="stop-color:#378b29;stop-opacity:1" />
+          <stop offset="74%" style="stop-color:#145214;stop-opacity:1" />
+        </linearGradient>
+      </defs>
+    </svg>
   </body>
 </html>
