--- a/public/index.html
+++ b/public/index.html
@@ -2,35 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="theme-color" content="#145214" />
+    <meta name="description" content="Transforming your organization with advanced solutions so excellence and efficiency meet." />
     
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Sights Studios - Where Excellence and Efficiency Meet" />
+    <meta property="og:description" content="Transforming your organization with advanced solutions so excellence and efficiency meet." />
+    <meta property="og:image" content="https://sightsstudios.com/sightsstudioslogo-5-square.jpg" />
+    <meta property="og:url" content="https://www.sightsstudios.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Sights Studios" />
+
+    <!-- Twitter Card Meta Tags (optional) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sights Studios - Where Excellence and Efficiency Meet" />
+    <meta name="twitter:description" content="Transforming your organization with advanced solutions so excellence and efficiency meet." />
+    <meta name="twitter:image" content="https://sightsstudios.com/sightsstudioslogo-5-square.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles.css" />
+
+    <!-- Title -->
     <title>Sights Studios - Where Excellence and Efficiency Meet</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
