--- a/public/index.html
+++ b/public/index.html
@@ -30,21 +30,29 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet" />
+    <!-- Preconnect to Google's font servers -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Load the font stylesheet -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- Preload -->
+    <link rel="preload" href="/sights-studios-website/public/photos/starrysky-main.webp" as="image">
+
 
     <!-- Title -->
     <title>Sights Studios - Where Excellence and Efficiency Meet</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <svg width="0" height="0">
       <defs>
         <linearGradient id="grad1" gradientTransform="rotate(315)">
-          <stop offset="0%" style="stop-color:#378b29;stop-opacity:1" />
+          <stop offset="0%" style="stop-color:#FAF9F6;stop-opacity:1" />
           <stop offset="74%" style="stop-color:#145214;stop-opacity:1" />
         </linearGradient>
       </defs>
